Stackoverflow fixed

--- a/src/RulesEngineEditor/wwwroot/css/reeditor.css
+++ b/src/RulesEngineEditor/wwwroot/css/reeditor.css
@@ -143,3 +143,8 @@ sp_grid_workflow {
     display: block;
     max-width: 100%;
 }
+
+.JSONErrors {
+    background-color: salmon;
+    width: 100%;
+}
